# platformer

./: .gitignore  CMakeLists.txt  Makefile
assets/: 0.level
assets/maps/: level.json  map.json
assets/tiles/: tiles.json
assets/tilesets/: tileset.json
include/: body.hpp  node.hpp  platformer.hh  sprite.hpp  tiled.hh
include/parsing/: parser.hpp
src/platformer/: body.cpp  legacy.cpp  main.c  main.cpp  node.cpp  platformer.c  sprite.cpp  tiled.cpp
src/platformer/parsing/: parser.cpp
